# terme

./: README.md
terme/: CMakeLists.txt  conanfile.py  xbuild.ps1  xbuild.sh  xrun.ps1  xrun.sh
terme/terme/: config.h  settings.h
terme/terme/core/: direction.h  frame.cpp  frame.h  simulation.cpp  simulation.h  world_space.cpp  world_space.h
terme/terme/entities/: collider.cpp  collider.h  fake_collider.h  game_object.cpp  game_object.h  i_simulation_entity.h  level.cpp  level.h  moving_straight_object.cpp  moving_straight_object.h  particle.cpp  particle.h  static_collider.cpp  static_collider.h  variable_size_collider.h
terme/terme/general/: vector2_int.h
terme/terme/input_manager/: base_input_manager.h  input_manager.h  linux_input_manager.h  windows_input_manager.h
terme/terme/managers/: audio_manager.cpp  audio_manager.h  debug_manager.cpp  debug_manager.h  persistence_manager.h  time_manager.cpp  time_manager.h
terme/terme/printers/: debug_printer.cpp  debug_printer.h  printer.h  simulation_printer.cpp  simulation_printer.h  ui_printer.cpp  ui_printer.h
terme/terme/terminal/: base_terminal.cpp  base_terminal.h  linux_terminal.cpp  linux_terminal.h  terminal.h  windows_terminal.cpp  windows_terminal.h
terme/test/: bunny.cpp  endless_runner_level.cpp  main.cpp  obstacle.cpp  pressure_plate.cpp  pushable_object.h  puzzle_level.cpp  test_level.h
